# AI-Travel-Companion-System

./: .gitignore  README.md  pyproject.toml  team.py
agent-ui/: package-lock.json
agent-ui/src/: store.ts
src/agnoprj/: app.py  requirements.txt
src/agnoprj/agents/: booking_agent.py  itinerary_agent.py  research_agent.py  support_agent.py
src/agnoprj/core/: __init__.py  base_agent.py  base_orchestrator.py  base_team.py  config.py  db.py  exceptions.py
src/agnoprj/registry/: __init__.py  agents.py  teams.py  tools.py
src/agnoprj/teams/: travel_team.py
src/agnoprj/tools/: search_flights_amadeus.py
src/agnoprj/utils/: __init__.py  http.py  logging.py  paths.py  validation.py
