[project]
name = "agnoprj"
version = "0.1.0"
description = ""
authors = [
    {name = "Israe KHOUI",email = "israekhoui9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "agno (>=2.3.24,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "openai (>=2.15.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "ag-ui-protocol (>=0.1.10,<0.2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "ddgs (>=9.10.0,<10.0.0)",
    "streamlit (>=1.40.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agnoprj", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
